[gd_scene load_steps=5 format=3 uid="uid://bnluu3gl2lhf7"]

[ext_resource type="Script" path="res://scripts/QuestionsPage.gd" id="1_snjsf"]
[ext_resource type="Texture2D" uid="uid://b7gcvw0fbr3o0" path="res://Game Assets/background1.jpeg" id="2_klxch"]
[ext_resource type="FontFile" uid="uid://cckoau3dy7sf4" path="res://Game Assets/narrator/PixelOperator8-Bold.ttf" id="3_usn78"]
[ext_resource type="Texture2D" uid="uid://cudi4cshok6w3" path="res://Game Assets/stopwatch.png" id="4_rraej"]

[node name="QuestionsPage" type="Node2D"]
position = Vector2(144, 93)
script = ExtResource("1_snjsf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(432, 232)
scale = Vector2(4.0493, 3.62921)
texture = ExtResource("2_klxch")

[node name="Button" type="Button" parent="."]
offset_left = -79.0
offset_top = 245.0
offset_right = 226.0
offset_bottom = 361.0

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 301.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_usn78")
theme_override_font_sizes/font_size = 24
text = "BoB"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button2" type="Button" parent="."]
offset_left = 650.0
offset_top = 246.0
offset_right = 955.0
offset_bottom = 362.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Button2"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 301.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_usn78")
theme_override_font_sizes/font_size = 24
text = "BoB"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button3" type="Button" parent="."]
offset_left = -79.0
offset_top = 399.0
offset_right = 226.0
offset_bottom = 515.0

[node name="Label" type="Label" parent="Button3"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 301.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_usn78")
theme_override_font_sizes/font_size = 24
text = "BoB"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button4" type="Button" parent="."]
offset_left = 650.0
offset_top = 407.0
offset_right = 955.0
offset_bottom = 523.0

[node name="Label" type="Label" parent="Button4"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 301.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_usn78")
theme_override_font_sizes/font_size = 24
text = "BoB"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="Timer"]
position = Vector2(558.875, 42.25)
scale = Vector2(0.251226, 0.251226)
texture = ExtResource("4_rraej")

[node name="Label" type="Label" parent="Timer"]
offset_left = 589.875
offset_top = 23.25
offset_right = 736.875
offset_bottom = 76.25
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_usn78")
theme_override_font_sizes/font_size = 24
text = "60.00s"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
